# icp-zk-maze

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/zkmaze_backend/: Cargo.toml  zkmaze_backend.did
src/zkmaze_backend/src/: lib.rs  test.rs
src/zkmaze_frontend/: package.json
src/zkmaze_frontend/src/: App.jsx
