[package]
name = "zkmaze_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
miden-vm = {git = "https://github.com/zCloak-Network/miden-winter.git", branch = "zk-maze", version = "0.5.0"}
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
hex = "0.4.3"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
sha2 = "0.10.6"
